--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^11.16.0",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
